--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-select/ng-select": "^1.6.3",
+    "@toverux/ngx-sweetalert2": "^3.4.0",
+    "ajv": "^6.0.0",
     "animate.css": "^3.5.2",
     "bootstrap": "4.0.0-beta",
     "bootstrap-datepicker": "^1.7.1",
@@ -30,7 +33,7 @@
     "bootstrap-tagsinput": "^0.7.1",
     "bootstrap-touchspin": "^3.1.1",
     "cd-themify-icons": "0.0.1",
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.7.3",
     "clipboard": "^1.7.1",
     "clockpicker": "0.0.7",
     "core-js": "^2.4.1",
@@ -49,22 +52,27 @@
     "jquery-validation": "^1.17.0",
     "jszip": "^3.1.5",
     "jvectormap": "^2.0.4",
+    "macaddress": "^0.2.9",
     "moment": "^2.20.1",
     "morris.js": "^0.5.0",
     "multiselect": "^0.9.12",
+    "node-sass": "^4.11.0",
     "peity": "^3.2.1",
     "popper.js": "^1.12.9",
     "raphael": "^2.2.7",
-    "rxjs": "^5.5.2",
+    "rxjs": "^5.5.12",
     "select2": "^4.0.6-rc.1",
-    "summernote": "^0.8.8",
+    "summernote": "^0.8.11",
+    "sweetalert2": "^7.32.4",
     "toastr": "^2.1.4",
+    "tslib": "^1.9.0",
     "typeahead.js": "^0.11.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular-devkit/core": "0.0.29",
-    "@angular/cli": "1.6.2",
+    "@angular/cli": "^7.1.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
@@ -74,13 +82,13 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^3.1.3",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
