--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@toverux/ngx-sweetalert2": "^3.4.0",
     "ajv": "^6.0.0",
     "animate.css": "^3.5.2",
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "^4.1.3",
     "bootstrap-datepicker": "^1.7.1",
     "bootstrap-daterangepicker": "^2.1.30",
     "bootstrap-markdown": "^2.10.0",
@@ -58,7 +58,7 @@
     "multiselect": "^0.9.12",
     "node-sass": "^4.11.0",
     "peity": "^3.2.1",
-    "popper.js": "^1.12.9",
+    "popper.js": "^1.14.3",
     "raphael": "^2.2.7",
     "rxjs": "^5.5.12",
     "select2": "^4.0.6-rc.1",
