--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.0.0",
+  "name": "itjobmada-backoffice",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -63,6 +63,7 @@
     "rxjs": "^5.5.12",
     "select2": "^4.0.6-rc.1",
     "summernote": "^0.8.11",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^7.32.4",
     "toastr": "^2.1.4",
     "tslib": "^1.9.0",
