--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-select/ng-select": "^1.6.3",
     "@toverux/ngx-sweetalert2": "^3.4.0",
     "ajv": "^6.0.0",
+    "alertifyjs": "^1.11.2",
     "animate.css": "^3.5.2",
     "bootstrap": "^4.1.3",
     "bootstrap-datepicker": "^1.7.1",
@@ -41,6 +42,7 @@
     "datatables.net-buttons-bs4": "^1.5.1",
     "datatables.net-fixedheader-bs4": "^3.1.3",
     "datatables.net-responsive-bs4": "^2.2.1",
+    "datatables.net-select": "^1.2.7",
     "easy-pie-chart": "^2.1.7",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.8.0",
