--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "morris.js": "^0.5.0",
     "multiselect": "^0.9.12",
     "node-sass": "^4.11.0",
+    "open-iconic": "^1.1.1",
     "peity": "^3.2.1",
     "popper.js": "^1.14.3",
     "raphael": "^2.2.7",
