--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "toastr": "^2.1.4",
     "tslib": "^1.9.0",
     "typeahead.js": "^0.11.1",
+    "wpapi": "^1.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
