--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-select/ng-select": "^1.6.3",
     "@tinymce/tinymce-angular": "^2.3.3",
     "@toverux/ngx-sweetalert2": "^3.4.0",
+    "@types/typeahead": "^0.11.32",
     "ajv": "^6.0.0",
     "alertifyjs": "^1.11.2",
     "animate.css": "^3.5.2",
@@ -52,6 +53,7 @@
     "jquery-minicolors": "^2.1.10",
     "jquery-slimscroll": "^1.3.8",
     "jquery-sparkline": "^2.4.0",
+    "jquery-ui": "^1.12.1",
     "jquery-validation": "^1.17.0",
     "jszip": "^3.1.5",
     "jvectormap": "^2.0.4",
