--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/node": "~6.0.60",
     "bootstrap": ">=4.1.3",
     "codelyzer": "^4.0.1",
+    "fsevents": "^1.2.4",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "^3.1.3",
@@ -101,7 +102,6 @@
     "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "fsevents": "^1.2.4"
+    "typescript": "^2.4.2"
   }
 }
