--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jquery-validation": "^1.17.0",
     "jszip": "^3.1.5",
     "jvectormap": "^2.0.4",
+    "lightbox2": "^2.10.0",
     "macaddress": "^0.2.9",
     "moment": "^2.20.1",
     "morris.js": "^0.5.0",
