--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-select/ng-select": "^1.6.3",
     "@tinymce/tinymce-angular": "^2.3.3",
     "@toverux/ngx-sweetalert2": "^3.4.0",
+    "@types/jspdf": "^1.2.2",
     "@types/typeahead": "^0.11.32",
     "ajv": "^6.0.0",
     "alertifyjs": "^1.11.2",
@@ -48,6 +49,7 @@
     "easy-pie-chart": "^2.1.7",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.8.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "ion-rangeslider": "^2.2.0",
     "jquery": "^3.2.1",
     "jquery-minicolors": "^2.1.10",
@@ -55,6 +57,7 @@
     "jquery-sparkline": "^2.4.0",
     "jquery-ui": "^1.12.1",
     "jquery-validation": "^1.17.0",
+    "jspdf": "^1.5.3",
     "jszip": "^3.1.5",
     "jvectormap": "^2.0.4",
     "lightbox2": "^2.10.0",
@@ -67,6 +70,7 @@
     "peity": "^3.2.1",
     "popper.js": "^1.14.3",
     "raphael": "^2.2.7",
+    "rasterizehtml": "^1.3.0",
     "rxjs": "^5.5.12",
     "select2": "^4.0.6-rc.1",
     "summernote": "^0.8.11",
