--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "toastr": "^2.1.4",
     "tslib": "^1.9.0",
     "typeahead.js": "^0.11.1",
-    "wpapi": "^1.1.2",
+    "wpapi": "^1.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -93,6 +93,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/lodash": "^4.14.117",
     "@types/node": "~6.0.60",
+    "@types/wpapi": "^1.1.0",
     "codelyzer": "^4.0.1",
     "fsevents": "^1.2.4",
     "jasmine-core": "~2.6.2",
