--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/lodash": "^4.14.117",
     "@types/node": "~6.0.60",
+    "@types/toastr": "^2.1.36",
     "@types/wpapi": "^1.1.0",
     "codelyzer": "^4.0.1",
     "fsevents": "^1.2.4",
