--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "jszip": "^3.1.5",
     "jvectormap": "^2.0.4",
     "lightbox2": "^2.10.0",
+    "lodash": "^4.17.15",
     "macaddress": "^0.2.9",
+    "mixin-deep": "^2.0.1",
     "moment": "^2.20.1",
     "morris.js": "^0.5.0",
     "multiselect": "^0.9.12",
@@ -73,9 +75,11 @@
     "rasterizehtml": "^1.3.0",
     "rxjs": "^5.5.12",
     "select2": "^4.0.6-rc.1",
+    "set-value": "^3.0.1",
     "summernote": "^0.8.11",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^7.32.4",
+    "tar": "^4.4.10",
     "tinymce": "^4.9.2",
     "toastr": "^2.1.4",
     "tslib": "^1.9.0",
